Changed references from /wp/ to /

--- a/header.html
+++ b/header.html
@@ -1,16 +1,16 @@
 <div>
-    <a href="http://openmobilealliance.org/" target="_blank"><img src="/wp/Images/oma_logo.jpg" /></a>
-    <a href="http://openmobilealliance.org/feed/" target="_blank"><img src="/wp/Images/oma_Feed.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
-    <a href="https://www.facebook.com/OpenMobileAlliance" target="_blank"><img src="/wp/Images/oma_facebook.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
-    <a href="https://www.linkedin.com/company/52819?trk=tyah" target="_blank"><img src="/wp/Images/oma_linkedin.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
-    <a href="https://twitter.com/openmobilea" target="_blank"><img src="/wp/Images/oma_twitter.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
-    <a href="https://www.youtube.com/user/openmobilealliance?feature=results_main" target="_blank"><img src="/wp/Images/oma_youtube.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
+    <a href="http://openmobilealliance.org/" target="_blank"><img src="/Images/oma_logo.jpg" /></a>
+    <a href="http://openmobilealliance.org/feed/" target="_blank"><img src="/Images/oma_Feed.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
+    <a href="https://www.facebook.com/OpenMobileAlliance" target="_blank"><img src="/Images/oma_facebook.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
+    <a href="https://www.linkedin.com/company/52819?trk=tyah" target="_blank"><img src="/Images/oma_linkedin.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
+    <a href="https://twitter.com/openmobilea" target="_blank"><img src="/Images/oma_twitter.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
+    <a href="https://www.youtube.com/user/openmobilealliance?feature=results_main" target="_blank"><img src="/Images/oma_youtube.jpg " HEIGHT="40" WIDTH="40" BORDER="0" /></a>
 </div>
 <header>
     <nav>
         <div class="technical-item">
             <div>
-                <a href="/wp/index.html">Specifications</a>
+                <a href="/index.html">Specifications</a>
             </div>
             <div>
                 <small>Technical Documents</small>
@@ -18,7 +18,7 @@
         </div>
         <div class="technical-item">
             <div>
-                <a href="/wp/API_Inventory.html">API</a>
+                <a href="/API_Inventory.html">API</a>
             </div>
             <div>
                 <small>Inventory</small>
@@ -26,7 +26,7 @@
         </div>
         <div class="technical-item">
             <div>
-                <a href="/wp/public_documents.html">Public Documents </a>
+                <a href="/public_documents.html">Public Documents </a>
             </div>
             <div>
                 <small>Public Access</small>
@@ -34,7 +34,7 @@
         </div>
         <div class="technical-item">
             <div>
-                <a href="/wp/supporting_data.html">Supporting Data</a>
+                <a href="/supporting_data.html">Supporting Data</a>
             </div>
             <div>
                 <small>Machine Readable Files</small>
@@ -42,7 +42,7 @@
         </div>
         <div class="technical-item">
             <div>
-                <a href="/wp/Affiliates.html">Affiliates</a>
+                <a href="/Affiliates.html">Affiliates</a>
             </div>
             <div>
                 <small>Organisation Integration</small>
@@ -50,7 +50,7 @@
         </div>
         <div class="community-item">
             <div>
-                <a href="/wp/registries.html">Registries</a>
+                <a href="/registries.html">Registries</a>
             </div>
             <div>
                 <small>Allocate ID</small>
@@ -66,7 +66,7 @@
         </div>
         <div class="community-item">
             <div>
-                <a href="/wp/testfest.html">TestFest</a>
+                <a href="/testfest.html">TestFest</a>
             </div>
             <div>
                 <small>Tools</small>
@@ -74,7 +74,7 @@
         </div>
         <div class="feedback-item">
             <div>
-                <a href="/wp/comments.html">Comments</a>
+                <a href="/comments.html">Comments</a>
             </div>
             <div>
                 <small>Contact us</small>
