--- a/Overviews/lightweightm2m_overview.html
+++ b/Overviews/lightweightm2m_overview.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div>
             <h1>
-               <a href="http://openmobilealliance.org/" target="_blank"><img src="/wp/Images/OMA-129 Lightweight M2M Logo_RGB_full.jpg" style="width:200px;height:100px;"></a> OMA LightweightM2M Overview  
+               <a href="http://openmobilealliance.org/" target="_blank"><img src="/Images/OMA-129 Lightweight M2M Logo_RGB_full.jpg" style="width:200px;height:100px;"></a> OMA LightweightM2M Overview  
             </h1>
        
         </div>
