--- a/testfest.html
+++ b/testfest.html
@@ -113,7 +113,7 @@
                             will be due upon registering and the event information will inform you what the fee covers / includes for the event.<br>
                             Once registration closes, OMA staff will create a formal testing agenda that will be distributed to participants on-site. More detailed travel and event information, including recommendations on where to stay, a general overview of the schedule,
                             arriving at the TestFest, and what to expect on-site, will be distributed via email to all participants as registration is in progress and once registration closes.<br>
-                            Participating teams may download the test material to be used during the event under <a href="http://devwww.openmobilealliance.org/wp/index.html">each Enabler</a>
+                            Participating teams may download the test material to be used during the event under <a href="http://devwww.openmobilealliance.org/index.html">each Enabler</a>
                         </p>
                     </td>
                 </tr>
@@ -137,7 +137,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="http://www.openmobilealliance.org/wp/comments.html">Problem Reporting</a>
+                        <a href="http://www.openmobilealliance.org/comments.html">Problem Reporting</a>
                     </td>
                     <td>
                         <p>
