Changed references from /wp/ to /

--- a/testfest/testfest.html
+++ b/testfest/testfest.html
@@ -89,7 +89,7 @@
                         <ul>
                             <p>TestFests are open to the public, as long as you fulfill the following criteria for entry to the event: </p>
                             <br />
-                            <p>•  You have a unique implementation of an <a href="http://www.openmobilealliance.org/wp/index.html">OMA Enabler</a>, developed by the company or in direct association with a third party</p>
+                            <p>•  You have a unique implementation of an <a href="http://technical.openmobilealliance.org/index.html">OMA Enabler</a>, developed by the company or in direct association with a third party</p>
                             <p>•  You have implemented all mandatory features of the Enabler to be tested</p>
                             <p>•  You have passed any entry conformance or other preparatory tests defined for the event, listed in the appendix section of the Enabler Test Specifications: “Entry Criteria for a TestFest”</p>
                             <p>•  You have signed a Non-Disclosure Agreement (NDA), provided by OMA, prior to attending the TestFest</p>
@@ -106,7 +106,7 @@
                             <p>
                                 The registration link for each event will be included with the TestEvent date and location on the <a href="http://openmobilealliance.org/oma_events/testfests/">TestFest homepage</a>. During registration, you will be asked to select which OMA Enabler you will be testing and if you are a Client or Server. The specified fee for that event will be due upon registering and the event information will inform you what the fee covers / includes for the event.<br /><br />
                                 Once registration closes, OMA staff will create a formal testing agenda that will be distributed to participants on-site. More detailed travel and event information, including recommendations on where to stay, a general overview of the schedule, arriving at the TestFest, and what to expect on-site, will be distributed via email to all participants as registration is in progress and once registration closes.<br /><br />
-                                Participating teams may download the test material to be used during the event under <a href="http://www.openmobilealliance.org/wp/index.html">each Enabler</a>.
+                                Participating teams may download the test material to be used during the event under <a href="http://technical.openmobilealliance.org/index.html">each Enabler</a>.
                             </p>
 
                         </ul>
