Updated relative paths for /release/ to full URL with https://www.openmobilealliance.org/release/

--- a/OMNA/drm/drm_sample_type_registry.html
+++ b/OMNA/drm/drm_sample_type_registry.html
@@ -35,7 +35,7 @@
             <p>
                 OMNA maintains this registry to record values used for the <strong><em>sample_type</em></strong> field of the OMAKeySampleEntry component.
                 The <strong><em>sample_type</em></strong> field element is defined in the
-                <a href="/release/BCAST/V1_0-20081209-C/OMA-TS-DRM_XBS-V1_0-20081209-C.pdf">OMA-TS-DRM_XBS-V1_0</a>
+                <a href="https://www.openmobilealliance.org/release/BCAST/V1_0-20081209-C/OMA-TS-DRM_XBS-V1_0-20081209-C.pdf">OMA-TS-DRM_XBS-V1_0</a>
                 specification. It is used to identify the particular data type of the associated content.
             </p>
             <p>
@@ -86,7 +86,7 @@
                         <td class="TableP1big">STKM for DRM profile</td>
                         <td class="TableP1big" rowspan="3">
                             Section 13.3.3 of
-                            <a href="/release/BCAST/V1_0-20081209-C/OMA-TS-DRM_XBS-V1_0-20081209-C.pdf">OMA-TS-DRM-XBS-V1_0</a>
+                            <a href="https://www.openmobilealliance.org/release/BCAST/V1_0-20081209-C/OMA-TS-DRM_XBS-V1_0-20081209-C.pdf">OMA-TS-DRM-XBS-V1_0</a>
                         </td>
                     </tr>
                     <tr>
