--- a/OMNA/xdm-document-management/xdm-document-management.html
+++ b/OMNA/xdm-document-management/xdm-document-management.html
@@ -65,22 +65,22 @@
                     <tr>
                         <td width="15%" style="height: 46px;" class="TableP1big">oma_allcontacts </td>
                         <td class="TableP1little">This name SHALL be used by an XDMC that has a need to store all users URIs, that it knows about, in one list independent of how the URIs are used. </td>
-                        <td colspan="2" class="TableP1big"><a target="_blank" href="/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
+                        <td colspan="2" class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
                     </tr>
                     <tr>
                         <td style="height: 46px;" class="TableP1big">oma_blockedcontacts </td>
                         <td class="TableP1little">This name SHALL be used by a XDMC that has a need to store URIs to users, that it want to block/reject in a number of application usages, in one list. </td>
-                        <td colspan="2" class="TableP1big"><a target="_blank" href="/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
+                        <td colspan="2" class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
                     </tr>
                     <tr>
                         <td style="height: 46px;" class="TableP1big">oma_buddylist </td>
                         <td class="TableP1little">This name SHALL be used by an XDMC that has a need to store all users URIs, that it wants to use for all types of communication, in one list. </td>
-                        <td colspan="2" class="TableP1big"><a target="_blank" href="/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
+                        <td colspan="2" class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
                     </tr>
                     <tr>
                         <td style="height: 46px;" class="TableP1big">oma_pocbuddylist </td>
                         <td class="TableP1little">This name SHALL be used by an XDMC that has a need to store users URIs, that it wants to use for PoC communication, in one list. </td>
-                        <td class="TableP1big"><a target="_blank" href="/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
+                        <td class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/XDM/V1_1-20080627-A/OMA-TS-XDM_Shared-V1_1-20080627-A.pdf" shape="rect">OMA-TS-XDM_Shared-V1_1</a> </td>
                     </tr>
                 </tbody>
             </table>
