--- a/Overviews/sec_cf_overview.html
+++ b/Overviews/sec_cf_overview.html
@@ -52,7 +52,7 @@
                 <li>IPSec profile</li>
             </ul>
         </div>
-        <p><a href="/release/SEC_CF">Documents for download</a></p>
+        <p><a href="https://www.openmobilealliance.org/release/SEC_CF">Documents for download</a></p>
     </div>
     
     <!-- This gets populated with the footer.html using Javascript -->
