--- a/OMNA/bcast/bcast-client-manufacturer-code-registry.html
+++ b/OMNA/bcast/bcast-client-manufacturer-code-registry.html
@@ -33,7 +33,7 @@
         <div class="fl size100of100  justify mbl">
             <div>
                 OMNA maintains a registry for <b class="pBoldl">ClientManufacturerCode </b>values to identify Vendors as established in section 6.11 of
-                <a href="/release/BCAST/V1_0-20090212-A/OMA-TS-BCAST_SvcCntProtection-V1_0-20090212-A.pdf" class="reg-txtUnderline textHoverBrwn">OMA-TS-BCAST_SvcCntProtection-V1_0</a>. These values are used to fill in the
+                <a href="https://www.openmobilealliance.org/release/BCAST/V1_0-20090212-A/OMA-TS-BCAST_SvcCntProtection-V1_0-20090212-A.pdf" class="reg-txtUnderline textHoverBrwn">OMA-TS-BCAST_SvcCntProtection-V1_0</a>. These values are used to fill in the
                 <b class="pBoldl">BCAST_Client_ID</b> identifier.
             </div>
             </br>
