--- a/OMNA/drm/drm_encryption_method_registry.html
+++ b/OMNA/drm/drm_encryption_method_registry.html
@@ -39,7 +39,7 @@
             </p>
             <p>
                 The <strong><em>EncryptionMethod</em></strong> field element is defined in the
-                <a href="/release/DRM/V2_0_2-20080723-A/OMA-TS-DRM_DCF-V2_0_2-20080723-A.pdf">OMA-TS-DRM_DCF-V2_0</a>
+                <a href="https://www.openmobilealliance.org/release/DRM/V2_0_2-20080723-A/OMA-TS-DRM_DCF-V2_0_2-20080723-A.pdf">OMA-TS-DRM_DCF-V2_0</a>
                 specification. It is used to select a particular method to decrypt the associated content.
             </p>
             <p>
@@ -91,7 +91,7 @@
                     <tr>
                         <td class="TableP1big">0x00</td>
                         <td class="TableP1big">NULL</td>
-                        <td class="TableP1big" rowspan="3"><a href="/release/DRM/V2_0_2-20080723-A/OMA-TS-DRM_DCF-V2_0_2-20080723-A.pdf">OMA-TS-DRM_DCF-V2_0</a> </td>
+                        <td class="TableP1big" rowspan="3"><a href="https://www.openmobilealliance.org/release/DRM/V2_0_2-20080723-A/OMA-TS-DRM_DCF-V2_0_2-20080723-A.pdf">OMA-TS-DRM_DCF-V2_0</a> </td>
                     </tr>
                     <tr>
                         <td class="TableP1big">0x01</td>
@@ -104,12 +104,12 @@
                     <tr>
                         <td class="TableP1big">0x03</td>
                         <td class="TableP1big">AES_128_BYTE_CTR</td>
-                        <td class="TableP1big"><a href="/release/BCAST/V1_0-20081209-C/OMA-TS-DRM_XBS-V1_0-20081209-C.pdf">OMA-TS-DRM_XBS-V1_0</a> </td>
+                        <td class="TableP1big"><a href="https://www.openmobilealliance.org/release/BCAST/V1_0-20081209-C/OMA-TS-DRM_XBS-V1_0-20081209-C.pdf">OMA-TS-DRM_XBS-V1_0</a> </td>
                     </tr>
                     <tr>
                         <td class="TableP1big">0x04</td>
                         <td class="TableP1big">MPEG-2_transport_stream_encryption</td>
-                        <td class="TableP1big"><a href="/release/SCE/V1_0-20081209-C/OMA-TS-SCE_MDCF-V1_0-20081209-C.pdf">OMA-TS-SCE_MDCF-V1_0</a></td>
+                        <td class="TableP1big"><a href="https://www.openmobilealliance.org/release/SCE/V1_0-20081209-C/OMA-TS-SCE_MDCF-V1_0-20081209-C.pdf">OMA-TS-SCE_MDCF-V1_0</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big"><em>0x05-0x1F</em></td>
