--- a/OMNA/presence/presence-service-description-registry.html
+++ b/OMNA/presence/presence-service-description-registry.html
@@ -35,7 +35,7 @@
                 OMNA maintains this registry to record values used by known services when invoking the OMA-defined Presence enabler.
             </p>
             <p>
-                The &lt;service-description> element is defined in the <a target="_blank" href="/release/PresenceSIMPLE/V1_1-20080128-C/OMA-TS-Presence_SIMPLE-V1_1-20080128-C.pdf">OMA-TS-Presence_SIMPLE-V1_1</a> specification. This element is composed of three subordinate element: &lt;service-id>, &lt;version> and &lt;description>. Each unique instance of the &lt;service-id> and &lt;version> is expected to be recorded in this table. The &lt;description> value is optional and may be set by the application without regard for the values shown inthe examples below.
+                The &lt;service-description> element is defined in the <a target="_blank" href="https://www.openmobilealliance.org/release/PresenceSIMPLE/V1_1-20080128-C/OMA-TS-Presence_SIMPLE-V1_1-20080128-C.pdf">OMA-TS-Presence_SIMPLE-V1_1</a> specification. This element is composed of three subordinate element: &lt;service-id>, &lt;version> and &lt;description>. Each unique instance of the &lt;service-id> and &lt;version> is expected to be recorded in this table. The &lt;description> value is optional and may be set by the application without regard for the values shown inthe examples below.
             </p>
             <p>New entries to be added to this table must be reviewed with the OMA COM WG. They will assure that the required data is correctly structured and does not conflict with existing service descriptions. </p>
             <table width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -68,49 +68,49 @@
                         <td width="19%" valign="middle" align="left" class="TableTitre2">PoC service-suite</td>
                         <td class="TableTitre2">org.openmobilealliance:PoC</td>
                         <td valign="middle" align="center" class="TableTitre2">1.0</td>
-                        <td class="TableTitre2"><a target="_blank" href="/release/PoC/V1_0-20060609-A/OMA-TS-PoC-ControlPlane-V1_0-20060609-A.pdf">OMA-TS-PoC_ControlPlane-V1_0</a></td>
+                        <td class="TableTitre2"><a target="_blank" href="https://www.openmobilealliance.org/release/PoC/V1_0-20060609-A/OMA-TS-PoC-ControlPlane-V1_0-20060609-A.pdf">OMA-TS-PoC_ControlPlane-V1_0</a></td>
                     </tr>
                     <tr>
                         <td width="19%" valign="middle" align="left" class="TableP1big">PoC session service </td>
                         <td class="TableP1little">org.openmobilealliance:PoC-session </td>
                         <td valign="middle" align="center" class="TableP1big">1.0</td>
-                        <td class="TableP1little"><a target="_blank" href="/release/PoC/V1_0-20060609-A/OMA-TS-PoC-ControlPlane-V1_0-20060609-A.pdf">OMA-TS-PoC_ControlPlane-V1_0</a> </td>
+                        <td class="TableP1little"><a target="_blank" href="https://www.openmobilealliance.org/release/PoC/V1_0-20060609-A/OMA-TS-PoC-ControlPlane-V1_0-20060609-A.pdf">OMA-TS-PoC_ControlPlane-V1_0</a> </td>
                     </tr>
                     <tr>
                         <td class="TableP1big">PoC alert service </td>
                         <td class="TableP1little">org.openmobilealliance:PoC-alert </td>
                         <td valign="middle" align="center" class="TableP1big">1.0</td>
-                        <td class="TableP1little"><a target="_blank" href="/release/PoC/V1_0-20060609-A/OMA-TS-PoC-ControlPlane-V1_0-20060609-A.pdf">OMA-TS-PoC_ControlPlane-V1_0</a> </td>
+                        <td class="TableP1little"><a target="_blank" href="https://www.openmobilealliance.org/release/PoC/V1_0-20060609-A/OMA-TS-PoC-ControlPlane-V1_0-20060609-A.pdf">OMA-TS-PoC_ControlPlane-V1_0</a> </td>
                     </tr>
                     <tr>
                         <td class="TableTitre2">SIMPLE IM service-suite</td>
                         <td class="TableTitre2">org.openmobilealliance:IM</td>
                         <td valign="middle" align="center" class="TableTitre2">1.0</td>
-                        <td class="TableTitre2"><a target="_blank" href="/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
+                        <td class="TableTitre2"><a target="_blank" href="https://www.openmobilealliance.org/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big" style="height: 19px">SIMPLE IM service</td>
                         <td class="TableP1little" style="height: 19px">org.openmobilealliance:IM-pager-mode</td>
                         <td valign="middle" align="center" class="TableP1big" style="height: 19px">1.0</td>
-                        <td class="TableP1little" style="height: 19px"><a target="_blank" href="/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
+                        <td class="TableP1little" style="height: 19px"><a target="_blank" href="https://www.openmobilealliance.org/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">SIMPLE IM service</td>
                         <td class="TableP1little">org.openmobilealliance:IM-session </td>
                         <td valign="middle" align="center" class="TableP1big">1.0</td>
-                        <td class="TableP1little"><a target="_blank" href="/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
+                        <td class="TableP1little"><a target="_blank" href="https://www.openmobilealliance.org/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">SIMPLE IM service</td>
                         <td class="TableP1little">org.openmobilealliance:File-Transfer</td>
                         <td valign="middle" align="center" class="TableP1big">1.0</td>
-                        <td class="TableP1little"><a target="_blank" href="/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
+                        <td class="TableP1little"><a target="_blank" href="https://www.openmobilealliance.org/release/SIMPLE_IM/V1_0-20120807-A/OMA-TS-SIMPLE_IM-V1_0-20120807-A.pdf">OMA-TS-SIMPLE-IM-V1_0</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">SIMPLE IM service</td>
                         <td class="TableP1big">org.openmobilealliance:IM-session</td>
                         <td valign="middle" align="center" class="TableP1big">2.0</td>
-                        <td class="TableP1big"><a target="_blank" href="/release/SIMPLE_IM/V2_0-20150310-A/OMA-TS-SIMPLE_IM-V2_0-20150310-A.pdf">OMA-TS-SIMPLE-IM-V2_0</a></td>
+                        <td class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/SIMPLE_IM/V2_0-20150310-A/OMA-TS-SIMPLE_IM-V2_0-20150310-A.pdf">OMA-TS-SIMPLE-IM-V2_0</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">Video Share service</td>
@@ -188,25 +188,25 @@
                         <td class="TableP1big" style="height: 20px">CPM Standalone Capabilities</td>
                         <td class="TableP1little">org.openmobilealliance:StandaloneMsg</td>
                         <td valign="middle" align="center" class=" TableP1big">2.0</td>
-                        <td class="TableP1big"><a target="_blank" href="/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
+                        <td class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">CPM Session Capabilities</td>
                         <td class="TableP1little">org.openmobilealliance:ChatSession</td>
                         <td valign="middle" align="center" class=" TableP1big">2.0</td>
-                        <td class="TableP1big"><a target="_blank" href="/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
+                        <td class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">CPM File Transfer Capabilities</td>
                         <td class="TableP1little">org.openmobilealliance:File-Transfer</td>
                         <td valign="middle" align="center" class=" TableP1big">2.0</td>
-                        <td class="TableP1big"><a target="_blank" href="/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
+                        <td class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big">CPM File Transfer Capabilities</td>
                         <td class="TableP1little">org.openmobilealliance:File-Transfer-thumb</td>
                         <td valign="middle" align="center" class=" TableP1big">2.0</td>
-                        <td class="TableP1big"><a target="_blank" href="/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
+                        <td class="TableP1big"><a target="_blank" href="https://www.openmobilealliance.org/release/CPM/V2_2-20170926-C/OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf">OMA-TS-CPM_Conversation_Function-V2_2-20170926-C.pdf</a></td>
                     </tr>
                     <tr>
                         <td class="TableP1big"></td>
