Updated relative paths for /tech/ to full URL with https://www.openmobilealliance.org/tech/

--- a/OMNA/shared/schema_based_namespace_registry.html
+++ b/OMNA/shared/schema_based_namespace_registry.html
@@ -41,7 +41,7 @@
 
             <b>urn:oma:xml:</b>{SchemaDomain}:<i>{SchemaSpecificTag}</i>
 
-            For each listed URN there is an associated <a href="/tech/profiles/">OMA Schema</a>. The following table links to the current schema-based URN allocations.
+            For each listed URN there is an associated <a href="https://www.openmobilealliance.org/tech/profiles/">OMA Schema</a>. The following table links to the current schema-based URN allocations.
 
         </div>
         <table id="sbnr-table" class="table-bordered">
