--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                         <td>
                             <a href="http://technical.openmobilealliance.org/Overviews/lightweightm2m_overview.html" class="orange">Overview</a><br>
                             <a href="./OMNA/LwM2M/LwM2MRegistry.html" class="orange">Registry</a><br>
-                            <a href="/tech/profiles/" class="blue">Supporting Data</a><br>
+                            <a href="https://www.openmobilealliance.org/tech/profiles/" class="blue">Supporting Data</a><br>
                             <a href="https://github.com/OpenMobileAlliance/OMA_LwM2M_for_Developers/wiki" class="green">Developer</a><br>
                             <a href="http://devtoolkit.openmobilealliance.org/OEditor/Legal?back=Default" class="green">Editor Tool</a><br>
                             <a href="./comments.html" class="red">Comment</a><br>
