--- a/public_documents.html
+++ b/public_documents.html
@@ -167,7 +167,7 @@
                     <td>
                         <ul>
                             <li>
-                                <a target="_blank" href="/tech/extref/">External References</a> <br />
+                                <a target="_blank" href="https://www.openmobilealliance.org/tech/extref/">External References</a> <br />
                             </li>
                             <li>
                                 <p>
