--- a/supporting_data.html
+++ b/supporting_data.html
@@ -49,7 +49,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <a href="/tech/dtd">DTDs</a>
+                        <a href="https://www.openmobilealliance.org/tech/dtd">DTDs</a>
                     </td>
                     <td>
                         Provides the storage area for the Document Type Definitions (DTDs). A DTD is a set of markup declarations that define a document type.
@@ -57,7 +57,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="/tech/profiles">Profile Data (Schemas, UAProf)</a>
+                        <a href="https://www.openmobilealliance.org/tech/profiles">Profile Data (Schemas, UAProf)</a>
                     </td>
                     <td>
                         Provides access to specified schema (and other related files). XML Schemas describe the structure and the constraints on the content of XML documents.
@@ -65,7 +65,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="/tech/wsdl">WSDL Packages</a>
+                        <a href="https://www.openmobilealliance.org/tech/wsdl">WSDL Packages</a>
                     </td>
                     <td>
                         Provides access to the available Web Services Description Language (WSDL) Packages that describe the functionality offered by web services.
@@ -73,7 +73,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="/tech/profiles/JSD">JSD Files</a>
+                        <a href="https://www.openmobilealliance.org/tech/profiles/JSD">JSD Files</a>
                     </td>
                     <td>
                         Provides access to the available JSON Schema Definition (JSD) packages that define the structure of JSON data using a JSON based format.
@@ -81,7 +81,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="/tech/profiles/widl">Web IDL Files</a>
+                        <a href="https://www.openmobilealliance.org/tech/profiles/widl">Web IDL Files</a>
                     </td>
                     <td>
                         Provides access to the available Web IDL Packages that are used to describe interfaces implemented in web browsers.
