Publish LwM2M VON V1.1 Guidelines document

--- a/public_documents.html
+++ b/public_documents.html
@@ -126,6 +126,18 @@
                 </tr>
                 <tr>
                     <td>
+                        Guidelines
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a target="_blank" href="https://www.openmobilealliance.org/documents/guidelines/OMA-Guidelines-LwM2M_VirtualObserveNotify-V1_1-20211130-A.pdf">OMA-Guidelines-LwM2M_VirtualObserveNotify-V1_1-20211130-A.pdf</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         Bird of Feathers
                     </td>
                     <td>
