Fix broken Use Agreement link

--- a/Affiliates/WAP.html
+++ b/Affiliates/WAP.html
@@ -50,7 +50,7 @@
                 <li class="mts"><a class="link" href="#previous">Previous Specification Suite Releases</a></li>
             </ul>
         </div>
-        <div class="fl size99of100 mtl mbm"><a target="_blank" href="http://openmobilealliance.org/about-oma/policies-and-terms-of-use/use-agreement/">Click here to view Use Agreement</a></div>
+        <div class="fl size99of100 mtl mbm"><a target="_blank" href="https://omaspecworks.org/about/policies-and-terms-of-use/use-agreement/">Click here to view Use Agreement</a></div>
         <!--Row-1 starts-->
         <div class="fl size99of100 mts mid-hd-bg" id="wap20">The WAP 2.0 conformance release</div>
         <div class="fl size99of100 mtl mbm">
