fix: url generation in enabler title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Open Mobile Alliance - Specifications</title>
     <meta charset="utf-8">
-    <!-- Font Awesome --!>
+    <!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="CSS/Normalize.css" />
@@ -35,14 +35,14 @@
             <p>The table below lists the Releases that OMA has published.</p>
         </div>
         <div id="enablers-table">
-        <!-- dynamic  Enablers Table --!>
+        <!-- dynamic  Enablers Table -->
         </div>
     </div>
 
     <!-- This gets populated with the footer.html using Javascript -->
     <div id="footer"></div>
    
-    <!-- Load scrips at the end for faster page rendering --!>
+    <!-- Load scrips at the end for faster page rendering -->
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="Scripts/specifications.js"></script>
     <script>
