Publish OSCORE V2.0 ERP

--- a/index.html
+++ b/index.html
@@ -811,6 +811,7 @@
                         <td><ul><li>-</li></ul></td>
                         <td>
                             <ul>
+                                <li>V2.0 <span class="release-note-phase">Feb 2022</span></li>
                                 <li>V1.1 <span class="release-note-phase">Nov 2020</span></li>
                                 <li>V1.0.1 <span class="release-note-phase">Jun 2019</span></li>
                             </ul>
