feat: add datatables to enablers table

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- DataTables CDN for CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="CSS/Normalize.css" />
     <!-- Latest compiled and minified CSS -->
@@ -44,6 +47,9 @@
    
     <!-- Load scrips at the end for faster page rendering -->
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <!-- DataTables CDN to load JS  -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+
     <script src="Scripts/specifications.js"></script>
     <script>
         $(() => {
