--- a/index.html
+++ b/index.html
@@ -806,7 +806,8 @@
                         <td><ul><li>V1.0 <span class="release-note-phase">Nov 2020</span></li></ul></td>
                     </tr>
                    <tr>
-                        <td><a href="https://www.openmobilealliance.org/release/ObjLwM2M_OSCORE">OMA LwM2M OSCORE (ObjLwM2M OSCORE)</a></td>
+                        <td><a href="https://www.openmobilealliance.org/release/ObjLwM2M_OSCORE">OMA LwM2M OSCORE (ObjLwM2M OSCORE)</a><br>
+                            <span class="release-note">UPDATED Feb 2022</span></td>
                         <td><a href="comments.html" class="red">Comment</a><br></td>
                         <td><ul><li>-</li></ul></td>
                         <td>
@@ -914,8 +915,7 @@
                         <td><ul><li>V1.0 <span class="release-note-phase">Sep 2019 Historic</span></li></ul></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.openmobilealliance.org/release/LWM2M_DevCapMgmt">OMA LWM2M Object Device Capability Management (LWM2M_DevCapMgmt)</a><br>
-                            <span class="release-note">UPDATED Jan 2021</span></td>
+                        <td><a href="https://www.openmobilealliance.org/release/LWM2M_DevCapMgmt">OMA LWM2M Object Device Capability Management (LWM2M_DevCapMgmt)</a></td>
                         <td><a href="comments.html" class="red">Comment</a><br></td>
                         <td><ul><li>-</li></ul></td>
                         <td><ul><li>V1.0.4 <span class="release-note-phase">Jan 2021</span></li></ul></td>
@@ -927,8 +927,7 @@
                         <td><ul><li>V1.0.1 <span class="release-note-phase">Jun 2020</span></li></ul></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.openmobilealliance.org/release/LWM2M_LOCKWIPE">OMA LWM2M object lock and wipe (LWM2M_LOCKWIPE)</a><br>
-                            <span class="release-note">UPDATED Jan 2021</span></td>
+                        <td><a href="https://www.openmobilealliance.org/release/LWM2M_LOCKWIPE">OMA LWM2M object lock and wipe (LWM2M_LOCKWIPE)</a></td>
                         <td><a href="comments.html" class="red">Comment</a><br></td>
                         <td><ul><li>-</li></ul></td>
                         <td><ul><li>V1.0.3 <span class="release-note-phase">Jan 2021</span></li></ul></td>
@@ -940,8 +939,7 @@
                         <td><ul><li>V1.0.1 <span class="release-note-phase">Jun 2020</span></li></ul></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.openmobilealliance.org/release/LWM2M_SWMGMT">OMA LWM2M object software management (LWM2M_SWMGMT)</a><br>
-                            <span class="release-note">UPDATED Jan 2021</span></td>
+                        <td><a href="https://www.openmobilealliance.org/release/LWM2M_SWMGMT">OMA LWM2M object software management (LWM2M_SWMGMT)</a></td>
                         <td><a href="comments.html" class="red">Comment</a><br></td>
                         <td><ul><li>-</li></ul></td>
                         <td><ul><li>V1.0.2 <span class="release-note-phase">Jan 2021</span></li></ul></td>
