Add AC for the DCB entitlement configuration
Requested by Nacho Blázquez, GSMA TSGVVEC Group Chair. See:
https://helpdesk.openmobilealliance.org/browse/OPEN-7886

--- a/OMNA/dm/dm_ac_registry.html
+++ b/OMNA/dm/dm_ac_registry.html
@@ -289,6 +289,12 @@
                     <td class="TableP1big">urn:oma:ac:ap2011_server_initiated_ODSA_entitlement_and_activation</td>
                     <td class="TableP1little">AC for Server initiated ODSA, Entitlement and Activation</td>
                  </tr>
+                 <tr>
+                    <td class="TableP1big">ap2012</td>
+                    <td class="TableP1little">ac_ap2012_gsma_dcb_entitlement_configuration</td>
+                    <td class="TableP1big">urn:oma:ac:ap2012_gsma_dcb_entitlement_configuration</td>
+                    <td class="TableP1little">AC for the DCB entitlement configuration</td>
+                 </tr>
             </tbody>
         </table>
 
@@ -300,4 +306,3 @@
 
 </body>
 </html>
-
