Update DM AC Registry for GSMA TSGVVEC group
To resolve:
https://helpdesk.openmobilealliance.org/browse/OPEN-7913
https://helpdesk.openmobilealliance.org/browse/OPEN-7918

--- a/OMNA/dm/dm_ac_registry.html
+++ b/OMNA/dm/dm_ac_registry.html
@@ -295,6 +295,18 @@
                     <td class="TableP1big">urn:oma:ac:ap2012_gsma_dcb_entitlement_configuration</td>
                     <td class="TableP1little">AC for the DCB entitlement configuration</td>
                  </tr>
+                 <tr>
+                    <td class="TableP1big">ap2013</td>
+                    <td class="TableP1little">ac_ap2013_gsma_private_user_id_entitlement_configuration</td>
+                    <td class="TableP1big">urn:oma:ac:ap2013_gsma_private_user_id_entitlement_configuration</td>
+                    <td class="TableP1little">AC for the Private User Identity entitlement configuration</td>
+                 </tr>
+                 <tr>
+                    <td class="TableP1big">ap2014</td>
+                    <td class="TableP1little">ac_ap2014_gsma_phone_number_entitlement_configuration</td>
+                    <td class="TableP1big">urn:oma:ac:ap2014_gsma_phone_number_entitlement_configuration</td>
+                    <td class="TableP1little">AC for the Phone Number Verification entitlement configuration</td>
+                 </tr>
             </tbody>
         </table>
 
