--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -278,14 +278,6 @@
                     <li>LwM2M Registry API: <a target="_blank" href="https://wiki.openmobilealliance.org/display/TOOL/Registry+API">LwM2M Registry API</a></li>
                 </ul>
             </p>
-            <p>The official publication of OMA LwM2M Objects and Resources is this page. However, the registration process is done via GitHub at: <a title="GitHub repository" href="https://github.com/OpenMobileAlliance/lwm2m-registry" target="_blank">lwm2m-registry</a>. IPSO Working Group, will review your registration. You can interact with this group via <a title="GitHub Issues" href="https://github.com/OpenMobileAlliance/lwm2m-registry/issues" target="_blank"> lwm2m-registry Issues</a>. </p>
-            <p>The Vorto Project is an Eclipse Foundation open source initiative that aims to help compile and manage abstract device descriptions (information models). The scope includes:</p>
-                <ul>
-                    <li>Vorto Repository - an open platform where information models are shared</li>
-                    <li>Vorto Domain Specific Language and editor - used to describe information models</li>
-                    <li>SDK - helps reduce development time</li>
-                </ul>
-            <p><a target="_blank" href="https://vorto.eclipse.org/#/?s=com.ipso.smartobjects">OMA SpecWorks IPSO Vorto models</a></p>
         </div>
         <div>
             <h2>
@@ -295,6 +287,7 @@
                 <thead>
                     <tr>
                         <th>Category</th>
+                        <th>Label</th>
                         <th>URN </th>
                         <th>Object ID range</th>
                         <th>Description</th>
@@ -303,8 +296,9 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td>OMA</td>
                         <td>
-                            <p>oma-label</p>
+                            <p>oma</p>
                         </td>
                         <td>
                             <p><code>urn:oma:lwm2m:oma:&lt;id&gt;:&lt;version&gt;</code></p>
@@ -325,6 +319,7 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>Reserved</td>
                         <td>
                             <p>reserved</p>
                         </td>
@@ -343,8 +338,9 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>SDO</td>
                         <td>
-                            <p>ext-label</p>
+                            <p>ext</p>
                         </td>
                         <td>
                             <p><code>urn:oma:lwm2m:ext:&lt;id&gt;:&lt;version&gt;</code></p>
@@ -363,8 +359,9 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>Vendors</td>
                         <td>
-                            <p>x-label</p>
+                            <p>x</p>
                         </td>
                         <td>
                             <p><code>urn:oma:lwm2m:x:&lt;id&gt;:&lt;version&gt;</code></p>
