updates based on David Navarro email

--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -367,26 +367,73 @@
                             <p><code>urn:oma:lwm2m:x:&lt;id&gt;:&lt;version&gt;</code></p>
                         </td>
                         <td>
-                            10241 - 26240<br/>
-                            26241 - 32768<br/>
+                            10241 - 32768
+                        </td>
+                        <td>
+                            Objects registered by companies or individuals.
+                        </td>
+                        <td>
+                            <a title="click here to view Objects registered by companies and individuals" href="#x_label">View</a>
+                        </td>
+                        <td>
+                            <a title="click here to register an Object if you are vendors or individuals" href="http://devtoolkit.openmobilealliance.org/OEditor/Register">Register</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Company Reserved</td>
+                        <td>
+                            <p>n/a</p>
+                        </td>
+                        <td>
+                            <p></p>
+                        </td>
+                        <td>
                             32769 - 42768
                         </td>
                         <td>
-                            Objects registered by companies or individuals.<br/>
-                            Objects Produced by Vendors to re-use<br/>
-                            Block of objects reserved by vendors (Max 50). Private range, Objects will not be published
+                            Company bulk reservation of up to 50 Object IDs. This range is to create private LwM2M Objects that are not published on the OMNA Lightweight Object registry.
                         </td>
                         <td>
-                            <a title="click here to view Objects registered by companies and individuals" href="#x_label">View</a><br />
-                            --<br />
                             <a title="click here to view reserved Objects" href="#reservedlabel">View</a>
                         </td>
                         <td>
-                            <a title="click here to register an Object if you are vendors or individuals" href="http://devtoolkit.openmobilealliance.org/OEditor/Register">Register</a><br />
-                            --<br />
                              <a title="click here to block reserve Objects" href="mailto:helpdesk@omaorg.org?Subject=Reserve%20Objects">Reserve</a>
                         </td>
                     </tr>
+                    <tr>
+                        <td>Test</td>
+                        <td>
+                            <p>n/a</p>
+                        </td>
+                        <td>
+                            <p></p>
+                        </td>
+                        <td>
+                            42769 - 42800
+                        </td>
+                        <td>
+                            Object IDs for testing purpose. These IDs MUST NOT be used in production as collisions with other Object IDs are possible.
+                        </td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Reserved</td>
+                        <td>
+                            <p>n/a</p>
+                        </td>
+                        <td>
+                            <p></p>
+                        </td>
+                        <td>
+                            42801 - 65534
+                        </td>
+                        <td>
+                            Reserved for future use.
+                        </td>
+                        <td></td>
+                        <td></td>
+                    </tr>                     
                 </tbody>
                 <caption>
                     Note: Final allocation of objectIDs will be done by OMNA Staff
