--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -554,9 +554,9 @@
         </div>
         <div>
             <h3 id="x_label"><strong>x-label</strong> Objects Produced by vendors or individuals</h3>
-            <p><code>URN: urn:oma:lwm2m:x:ObjectID:version | ranges (10,241 - 26,240) &amp; (26,241 - 32,768)</code></p>
-            <p>10241 - 26240 Range accepts registration</p>
-            <p>26241 - 32768 Range is privately reused and there is no need for registration</p>
+            <p><code>URN: urn:oma:lwm2m:x:ObjectID:version | ranges (10,241 - 32,768)</code></p>
+            <p>10241 - 32768 Range accepts registration.</p>
+            <p>26241 - 32768 Previously this range didn't need registration but since Jan 24, 2023 it does.</p>
             <table id="publicobjects_tbl" class="descriptive-table">
                 <thead>
                     <tr>
